# exam-preparation-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
data/: example.csv
src/app/: cli.py  config.py  logging.py  models.py  processors.py  reporters.py  scripts.py  utils.py
src/test/: test_models.py
src/tests/: test_cli.py  test_logging.py  test_models.py  test_processors.py  test_reporters.py  test_scripts.py  test_utils.py
