[project]
name = "exam-preparation-analyzer"
version = "0.1.0"
description = "Script for analyse exam preparation of studens"
readme = "README.md"
authors = [
    {name = "Anton Lukisha", email = "anton.lukisha.dev@gmail.com"},
]
requires-python = ">=3.13"
dependencies = [
    "tabulate>=0.10.0"
]

[project.scripts]
app = "app.cli:main"
lint = "app.scripts:lint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app", "src/test"]

[tool.uv]
dev-dependencies = [
    "black>=26.1.0",
    "isort>=8.0.1",
    "ruff>=0.15.6",
    "mypy>=1.19.1",
    "types-tabulate>=0.10.0.20260308"
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py313"
line-length = 150

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

