[project]
name = "exam-preparation-analyzer"
version = "0.1.0"
description = "Script for analyse exam preparation of studens"
readme = "README.md"
authors = [
    {name = "Anton Lukisha", email = "anton.lukisha.dev@gmail.com"},
]
requires-python = ">=3.13"
dependencies = [
    "tabulate>=0.10.0"
]

[project.scripts]
app = "app.cli:main"
lint = "app.scripts:lint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv]
dev-dependencies = [
    "black>=26.1.0",
    "isort>=8.0.1",
    "ruff>=0.15.6",
    "mypy>=1.19.1",
    "types-tabulate>=0.10.0.20260308",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
target-version = "py313"
line-length = 150

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "ARG", "SIM"]
ignore = []

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-v --strict-config --strict-markers --cov=app --cov-report=term-missing --cov-report=html --tb=short -ra"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["app"]
omit = ["*/__init__.py", "*/__main__.py", "app/scripts.py", "tests/*"]
parallel = true

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if (0|False):",
    "except ImportError",
    "if typing.TYPE_CHECKING:",
]
